src/components/Settings/section.module.css
.section {
  display: grid;
  row-gap: 1em;
}

.section > header {
  font-size: 0.8rem;
  color: var(--font-color-accent-1);
  font-variation-settings: "wght" 650;
  user-select: none;
}

.section > div {
  display: grid;
  grid-auto-flow: row;
  grid-template-columns: max-content min-content;
  grid-auto-rows: min-content;
  place-items: center start;
  row-gap: 0.75em;
  column-gap: 1.25em;

  border: var(--section-border);
  box-shadow: var(--section-shadow);
  border-radius: 5px; 

  padding: 1.5em;
  color: var(--font-color-1);
}

/* Forms */

.section input,
.section select {
  border-radius: 5px;
  outline: none;
  border: none;
  font-variation-settings: "wght" 650;
  font-family: inherit;
  background: var(--input-bg);
}

.section label {
  user-select: none;
  font-size: 0.7rem;
}


.section input[type=radio] {
  display: none;
}

/* number/text */

.section input[type=number] {
  padding: 0.35em 0.75em;
}

.section input[type=text] {
  justify-self: stretch;
  padding: 0.35em 0 0.35em 0.75em;
  overflow: hidden;
}

/* select */

.section select:disabled {
  opacity: 0.5;
}

.section select {
  padding: 0.1em 0.2em;
}

/* focus */

.section input:focus {
  outline: 2px solid var(--accent-1);
  background: var(--input-bg-focus);
}

